--- a/Lesson12/HW12/user-details.html
+++ b/Lesson12/HW12/user-details.html
@@ -7,8 +7,8 @@
 <body>
 <script>
     let url = new URL(location.href);
-    let data = url.searchParams.get('data');
-    console.log(JSON.parse(data));
+    let id = url.searchParams.get('userId');
+    console.log(JSON.parse(id));
 
 </script>
 </body>
