--- a/Lesson12/HW12/user-details.html
+++ b/Lesson12/HW12/user-details.html
@@ -3,12 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
 <script>
+
+
+    // const userId = new URL(location.href).searchParams.get('userId');
+
     let url = new URL(location.href);
-    let id = url.searchParams.get('userId');
-    console.log(JSON.parse(id));
+
+
+    let id2 = url.searchParams.get('userId');
+    let id = JSON.parse(id2);
+            console.log(id);
+    //         const block = document.createElement('wrap');
+    //         const ul = document.createElement('ul');
+    //
+    //         block.appendChild(ul);
+    //         recursiveBuild(id, ul);
+    //         document.body.appendChild(block);
+    //
+    //
+    // function liCreator(key, value, parent) {
+    //     const li = document.createElement('li');
+    //     li.innerHTML = `<b>${key}:</b> ${value}`;
+    //     parent.appendChild(li);
+    // }
+    //
+    // function ulBuilder(key, object, parent) {
+    //     const li = document.createElement('li');
+    //     const ul = document.createElement('ul');
+    //     li.innerHTML = `<b>${key}:</b>`;
+    //     parent.appendChild(li);
+    //     li.appendChild(ul);
+    //     recursiveBuild(object, ul);
+    // }
+    //
+    // function recursiveBuild(object, parent) {
+    //     for (const key in object) {
+    //         typeof object[key] === 'object'
+    //             ? ulBuilder(key, object[key], parent)
+    //             : liCreator(key, object[key], parent)
+    //     }
+    // }
+
+
 
 </script>
 </body>
