--- a/mini project/post-list.html
+++ b/mini project/post-list.html
@@ -3,8 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        h1{
+            display: flex;
+            justify-content: center;
+        }
+        .postText{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 40px;
+
+        }
+        .postBack{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+         align-items: center;
+        }
+        .button{
+            width: 40%;
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
+<h1>Posts</h1>
 <script>
     
     const userId = new URL(location.href).searchParams.get('userId');
@@ -13,20 +37,29 @@
     fetch(`https://jsonplaceholder.typicode.com/users/${userId}/posts`)
         .then((response) => response.json())
         .then((posts) => {
-            const blockList = document.createElement('div');
-            blockList.className = 'postList';
+
             posts.map(post => {
+
+                const blockBack = document.createElement('div');
+                blockBack.className = 'postBack';
+
                 const postBlock = document.createElement('div');
                 postBlock.innerText = `Title: ${post.title}`;
+                postBlock.className = 'postText'
+
+
+
                 const buttonNext = document.createElement('button');
                 buttonNext.innerText = 'Post Details';
+                buttonNext.className = 'button';
                 buttonNext.onclick = () => {
                     location.href = `post-details.html?postId=${post.id}`;
                 };
 
+                blockBack.append(postBlock, buttonNext);
 
-                blockList.append(postBlock,buttonNext);
-                document.body.appendChild(blockList)
+
+                document.body.appendChild(blockBack)
             })
 
         });
