--- a/mini project/post-list.html
+++ b/mini project/post-list.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        body{
+            background-color: bisque;
+            padding-bottom: 20px;
+        }
         h1{
             display: flex;
             justify-content: center;
+            font-size: 40px;
         }
         .postText{
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 40px;
+            font-size: 30px;
+            border-style: outset;
+            width: 50vw;
+
 
         }
         .postBack{
@@ -21,17 +29,29 @@
             justify-content: center;
          align-items: center;
         }
-        .button{
+        .button {
             width: 40%;
-            font-size: 20px;
+            font-size: 16px;
+            transition: 2s;
+            background-color: bisque;
+            border: none;
+
+
         }
+        :hover.button{
+            background-color: navajowhite;
+            transition: 2ms;
+            border-style: outset;
+        }
+
+
     </style>
 </head>
 <body>
 <h1>Posts</h1>
 <script>
-    
     const userId = new URL(location.href).searchParams.get('userId');
+
     console.log(userId)
 
     fetch(`https://jsonplaceholder.typicode.com/users/${userId}/posts`)
@@ -42,15 +62,16 @@
 
                 const blockBack = document.createElement('div');
                 blockBack.className = 'postBack';
-
                 const postBlock = document.createElement('div');
                 postBlock.innerText = `Title: ${post.title}`;
                 postBlock.className = 'postText'
 
 
 
+
+
                 const buttonNext = document.createElement('button');
-                buttonNext.innerText = 'Post Details';
+                buttonNext.innerText = '↑___Post Details___↑';
                 buttonNext.className = 'button';
                 buttonNext.onclick = () => {
                     location.href = `post-details.html?postId=${post.id}`;
