--- a/mini project/user-details.html
+++ b/mini project/user-details.html
@@ -3,25 +3,57 @@
 <head>
     <title>User Details</title>
     <style>
+        body{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin: 0;
+            padding: 20px;
+            background-color: #f6d3cd;
+        }
 
         #block{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            padding: 20px;
+
+
         }
         h1{
+            width: 80vw;
+            border-style: groove;
             display: flex;
             justify-content: center;
+            background-color: #e3b443;;
         }
         .buttonPost{
             width: 90vw;
+            background-color: bisque;
+            transition: 2s;
+            border-style: inset;
+            font-size: 20px;
+
+
         }
-        /*.block{*/
-        /*    display: flex;*/
-        /*    justify-content: center;*/
-        /*    align-items: center;*/
-        /*}*/
+        :hover.buttonPost{
+            background-color: orange;
+            transition: 2s;
+        }
+       #UL{
+           display: flex;
+           flex-direction: column;
+           align-items: center;
+           background-color: bisque;
+           font-size: 30px;
+           border-style: outset;
+
+           width: 50vw;
+
+       }
+
 
     </style>
 </head>
@@ -29,16 +61,16 @@
 <h1>User Details</h1>
 <div class="block">
     <script>
-
         const userId = new URL(location.href).searchParams.get('userId');
 
         fetch(`https://jsonplaceholder.typicode.com/users/${userId}`)
             .then(response => response.json())
             .then(user => {
 
-                const block = document.createElement('wrap');
+                const block = document.createElement('div');
                 block.id = 'block'
                 const ul = document.createElement('ul');
+                ul.id = 'UL'
                 recursiveBuild(user, ul);
                 block.appendChild(ul);
                 const button = document.createElement('button');
@@ -51,13 +83,7 @@
                 document.body.appendChild(block);
             });
 
-
-
-
-
-
-
-        function liCreator(key, value, parent) {
+    function liCreator(key, value, parent) {
             const li = document.createElement('li');
             li.innerHTML = `<b>${key}:</b> ${value}`;
             parent.appendChild(li);
@@ -80,8 +106,39 @@
             }
         }
 
-
-        // document.body.appendChild(button);
+        //        const userId = new URL(location.href).searchParams.get('userId');
+        //        fetch(`https://jsonplaceholder.typicode.com/users/${userId}`)
+        //            .then(response => response.json())
+        //            .then(users => {
+        //                userInfo(users)
+        //            });
+        //
+        //        const userDetails = document.createElement('div');
+        //        const ul = document.createElement('ul');
+        //        const button = document.createElement('button');
+        //        button.className = 'buttonPost'
+        //        button.innerText = 'Post of Current User';
+        //        button.onclick = () => {
+        //            location.href = `post-list.html?userId=${userId}`
+        //        }
+        //        userDetails.append(ul, button);
+        //        document.body.appendChild(userDetails);
+        //        function userInfo(user) {
+        //                    for (const key in user) {
+        //                        const value = user[key];
+        //
+        //                        if (typeof value === 'object') {
+        //                            const li1 = document.createElement('li');
+        //                            li1.innerHTML = `<b>${key}:</b>`;
+        //                            ul.appendChild(li1);
+        //                            displayUserInfo(value); // Рекурсивный вызов для вложенных объектов
+        //                        } else {
+        //                            const li = document.createElement('li');
+        //                            li.innerHTML = `<b>${key}:</b> ${value}`;
+        //                            ul.appendChild(li);
+        //                        }
+        //                    }
+        //           }
 
         // На странице user-details.html:
         // 4 Вивести всю, без виключення, інформацію про об'єкт user на який клікнули
